[IB-552] iOS 10 js<->native communication fixed
The previous method of duplicating WkWebView hooks is not longer working,
this method was 'tricking' the webview into exposing window.webkit.messageHandlers. Just install functions without
this object prefix.

reference: https://github.com/brave/browser-ios/commit/48ddf0d04a30a7d7ef01245e518bd00b73716ee7

--- a/Client/Assets/NetError.html
+++ b/Client/Assets/NetError.html
@@ -15,7 +15,7 @@
         if (fresh)
           fresh = false;
         else
-          webkit.messageHandlers.localRequestHelper.postMessage({ type: "reload" });
+          __cliqzjs___localRequestHelper({ type: "reload" });
       });
     </script>
   </head>
