translate adBlocker text IB-717

--- a/Client/Cliqz/Frontend/Resources/fr.lproj/FairBlocking.html
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/FairBlocking.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        <p>The CLIQZ ad blocker is in beta at the moment. The final version will provide the following options: Allow fair ads (default setting), block all ads, allow all ads. <a href="https://cliqz.com/whycliqz/adblocking"> More </a>
+        <p>Le bloqueur de publicité de Cliqz est encore en version Beta. La version finale supportera les fonctionnalités suivantes: Autoriser les publicités équitables (par défaut), bloquer toutes les pubs, autoriser toutes les pubs.<a href="https://cliqz.com/whycliqz/adblocking"> Plus </a>
         </p>
     </body>
 </html>
