[IB-895] French encoding

--- a/Client/Cliqz/Frontend/Resources/fr.lproj/FairBlocking.html
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/FairBlocking.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta http-equiv="content-type" content="text/html;charset=utf-8">
         <style type="text/css">
             p {
                 font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -11,7 +12,7 @@
         </style>
     </head>
     <body>
-        <p>Le bloqueur de publicité de Cliqz est encore en version Beta. La version finale supportera les fonctionnalités suivantes : Autoriser les publicités équitables (par défaut), bloquer toutes les publicités, autoriser toutes les publicités.<a href="https://cliqz.com/whycliqz/adblocking"> Plus </a>
+        <p>Le bloqueur de publicité de Cliqz est encore en version Beta. La version finale supportera les fonctionnalités suivantes : Autoriser les publicités équitables (par défaut), Bloquer toutes les publicités, Autoriser toutes les publicités.<a href="https://cliqz.com/whycliqz/adblocking"> En savoir plus </a>
         </p>
     </body>
 </html>
