--- a/Client/Cliqz/Frontend/Resources/de.lproj/FairBlocking.html
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/FairBlocking.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta http-equiv="content-type" content="text/html;charset=utf-8">
         <style type="text/css">
             p {
                 font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
